force-app/main/default/objects/Ipi_Truck__c/fields/Ipi_FipValue__c.field-meta.xml
<CustomField>
    <fullName>Ipi_FipValue__c</fullName>
    <label>Fip Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>