force-app/main/default/objects/Ipi_Truck__c/fields/Ipi_ManufacturingCost__c.field-meta.xml
<CustomField>
    <fullName>Ipi_ManufacturingCost__c</fullName>
    <label>Manufacturing Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>