force-app/main/default/objects/Ipi_Truck__c/fields/Ipi_SaleValue__c.field-meta.xml
<CustomField>
    <fullName>Ipi_SaleValue__c</fullName>
    <label>Sale Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>