force-app/main/default/objects/Ipi_Truck__c/fields/Ipi_StockQuantity__c.field-meta.xml
<CustomField>
    <fullName>Ipi_StockQuantity__c</fullName>
    <label>Stock Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>