force-app/main/default/objects/Ipi_Truck__c/fields/Ipi_Version__c.field-meta.xml
<CustomField>
    <fullName>Ipi_Version__c</fullName>
    <label>Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Semi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>