force-app/main/default/objects/Ipi_Truck__c/fields/Ipi_Year__c.field-meta.xml
<CustomField>
    <fullName>Ipi_Year__c</fullName>
    <label>Year</label>
    <type>Date</type>
</CustomField>